<resources>
    <string name="app_name">Scheduli</string>

    //Login Screen Strings
    <string name="login_title">Welcome to Scheduli</string>
    <string name="login_subTitle">Login to your account</string>
    <string name="return_to_login_screen">Return to login screen</string>

    //Forgot Password Strings
    <string name="forgot_pass_title">Recover Password</string>
    <string name="forgot_pass_subTitle">Let\'s get your password back</string>

    <string name="appointment_nav_title">Appointments</string>
    <string name="profile_nav_title">Profile</string>

    //Adapter Strings
    <string name="adapter_date_icon_desc">Provide Date of appointment</string>
    <string name="adapter_time_icon_desc">Provide Time of appointment</string>
    <string name="adapter_phone_icon_desc">Provide Phone of provider in appointment</string>
    <string name="no_appointment_found">No appointments found</string>
    <string name="appointment_item_title">You have appointment with %1$s for %2$s</string>

    //Sign-up Strings
    <string name="sign_up_title">Create Account</string>
    <string name="sign_up_subTitle">What gets scheduled gets done.</string>
    <string name="sign_up_confirm">Let\'s start</string>

    //General Strings
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign-Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="app_icon_description">main app icon</string>
    <string name="send_password">Send password</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="app_settings">App Settings</string>
    <string name="logout">Logout</string>

    //Sign-up notification
    <string name="sign_up_notification_placeholder_text_template">
        We want to welcome you to our app %1$s.
        Thank you…
    </string>
    <string name="new_user_channel">added new user</string>
    <string name="signup_notification_channel_description">notification sent for new users added to the app</string>
    <string name="reschedule">Reschedule</string>


    //Settings
    <string name="settings_title">Scheduli Settings</string>
    <string name="language_select_summary">Select what language you want your app to show</string>
    <string name="language_select_title">Language of the app</string>
    <string name="settings_category_language">Language Selection</string>
    <string name="appointment_fragment_title">Your Appointments</string>
    <string name="future_appointments">Future Appointments</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="get_current_phone_number">Get current Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="thank_you">Thank you for joining us</string>
    <string name="no_appointments_to_show">No appointments to show</string>
    <string name="appointment_no_show_description">To add appointments click on the looking glass button at the bottom of the screen</string>
    <string name="all">All</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="company_name">Company Name</string>
    <string name="profession">Profession</string>
    <string name="service_name">Service Name</string>
    <string name="service_cost">Service Cost</string>
    <string name="happens_on">Happens On</string>
    <string name="between">Between</string>
    <string name="address">Address</string>
    <string name="call_business">Call Business</string>
    <string name="provider_profile_picture">provider profile picture</string>
    <string name="provider_missing_phone_error_message">Provider doesn\'t have phone number provided</string>
    <string name="user_email">Email</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_fullname">Full Name</string>
    <string name="profile_provider_button">Provider</string>

    //upcoming notifications
    <string name="upcoming_appointment_notification_title">Upcoming appointment
    </string>
    <string name="upcoming_appointment_notification_main_text">
        You have upcoming appointment with %1$s at %2$s
    </string>
    <string name="upcoming_notification_channel">upcoming channel</string>
    <string name="upcoming_notification_channel_description">Used for reminding user about upcoming appointment</string>
    <string name="alarm_reminder_text">Alarm set for %1$s</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="sample">Sample Here</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="set_alarm_date">Set alarm date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Booking Appointment

    <string name="booking_appointment">Book Appointment</string>
    <string name="attempting_to_login">Attempting To login</string>
    <string name="provider_details">Provider Details</string>
    <string name="set_appointment_in_calender">Set Appointment In Calender</string>
    <string name="cancel_delete_appointment">Cancel Appointment</string>
    <string name="allowAppointmentLimitingKey">allowAppointmentLimiting</string>
    <string name="appointmentsCountKey">appointmentsCount</string>
    <string name="appointmentsCountTitle">Select Amount Of appointments to show</string>
    <string name="allowAppointmentLimitingSummary">Enable or disable appointment limiting this might affect your performance.
        This will affect the next time we will pull your appointments from the web</string>
    <string name="allowAppointmentLimitingTitle">Allow appointment limiting</string>
    <string name="calender_appointemnt_text">You have appointment for %1$s</string>
    <string name="provider_company_name">Provider Company Name</string>
    <string name="provider_sing_up_title">Start Your Business Today!</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="return_to_profile_screen">Return back to Profile screen</string>
    <string name="provider_sing_up_confirm">Let\'s Start</string>
    <string name="ed_provider_address">Address</string>
    <string name="add_new_service_headline">Add New Service</string>
    <string name="add_new_service_instructions">Please fill the form</string>
    <string name="service_duration">Service Duration</string>
    <string name="set_your_schedule">Set your schedule</string>
    <string name="set_schedule_instruc">Toggle On the days you want work on and select the start time and the end time for the current day from 00:00 to 23:59</string>
    <string name="day_sunday">Sun</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="midnight_time">00:00</string>
    <string name="continue_to_set_service_schedule">Continue To Schedule</string>
    <string name="my_services">My Services</string>
    <string name="delete">Delete Service</string>

    //Settings
    <array name="settingsLimitValues">
        <item>"5"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"20"</item>
    </array>

</resources>
