<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Appointments pulling settings">
        <SwitchPreferenceCompat
            app:key="@string/allowAppointmentLimitingKey"
            android:defaultValue="false"
            app:title="@string/allowAppointmentLimitingTitle"
            app:summary="@string/allowAppointmentLimitingSummary" />

        <DropDownPreference
            android:dependency="@string/allowAppointmentLimitingKey"
            app:key="@string/appointmentsCountKey"
            app:title="@string/appointmentsCountTitle"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/settingsLimitValues"
            android:entryValues="@array/settingsLimitValues" />
    </PreferenceCategory>


</PreferenceScreen>