<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.service.AddServiceActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nl_add_service"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/app_icon_description"
                android:src="@drawable/ic_scheduli_app_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_new_service_headline"
                style="@style/headLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add_new_service_headline"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/im_logo" />

            <TextView
                android:id="@+id/tv_instruc_addservice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add_new_service_instructions"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_new_service_headline" />

            <EditText
                android:id="@+id/ed_service_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/service_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruc_addservice" />

            <TextView
                android:id="@+id/tv_service_cost"
                style="@style/basicTextFont"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:paddingStart="5dp"
                android:ems="10"
                android:text="@string/service_cost"
                android:textAppearance="@style/basicTextFont"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_service_name" />

            <TextView
                android:id="@+id/tv_service_duration"
                android:text="@string/service_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                style="@style/basicTextFont"
                android:paddingStart="5dp"
                android:ems="10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_service_cost"
                app:layout_constraintTop_toBottomOf="@+id/tv_service_cost" />

            <EditText
                android:id="@+id/ed_service_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="in $"
                app:layout_constraintStart_toEndOf="@+id/tv_service_cost"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="@+id/ed_service_name"
                app:layout_constraintTop_toBottomOf="@+id/ed_service_name" />

            <EditText
                android:id="@+id/et_service_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="In Minutes"
                app:layout_constraintStart_toEndOf="@+id/tv_service_cost"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintEnd_toEndOf="@+id/ed_service_cost"
                app:layout_constraintTop_toBottomOf="@+id/ed_service_cost"
                app:layout_constraintBottom_toBottomOf="@+id/tv_service_duration" />



            <Button
                android:id="@+id/btn_create_service"
                style="@style/appCompactButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/provider_sing_up_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_service_duration" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>